# astro-analysis

./: CMakeLists.txt  LICENSE.LGPL  README.html  README.md
astrocytes_library/include/: astrocyte.h  auxiliaries.h  component.h  compute_ii.h  config.h  declaration.h  geometry.h  logger.h  segmentation_settings.h  utilities.h  vertex.h  video_data.h
astrocytes_library/src/: CMakeLists.txt  astrocyte.cpp  clusters.cpp  compute_ii.cpp  logger.cpp  utilities.cpp
auxiliary_scripts/: draw_activity_moments.py
data/single_astrocyte/: information about.txt
matlab_scripts/: README.html  README.md  astro_lab_environment.m  astrocyte_analysis_params.m  astrocyte_network_research.m  astrocyte_research.m  bm3d_source_3d.m  bm3d_source_4d.m  calc_events_info.m  calc_statistics.m  config.txt  convert_imgs2mat.m  convert_tif2mat.m  disp_conf_parameters.m  events_form.fig  events_form.m  implay_map.m  info_log.m  kstest_events_info.m  main_form.fig  main_form.m  norm_data.m  parse_config.m  run_astro_lab.m  save_events_info.m  save_imgs2avi.m  save_log.m  save_results2video.m  video_bm3d.m  view_all_distribution.m  view_distribution.m  view_events.m
matlab_scripts/auxiliary/: CachedMatFile.m  CachedMatFiles.m  Count.m  Properties.m  STREP.m  add_info_log.m  alg_name.m  beautify_astro_lab.m  build_path.m  convert_imgs2mat.m  convert_tif2mat.m  disp_conf_parameters.m  get_byte_size.m  get_ids.m  get_info_log.m  has_item.m  image_channel_mask.m  load_info_log.m  logging_disable.m  logging_enable.m  min_max.m  norm_data.m  output.m  parse_config.m  rescale_variable.m  resize_video.m  size_to_str.m  try_eval.m  upd_struct.m
matlab_scripts/calc/: calc_area.m  calc_area_astrocytes.m  calc_average_events_area.m  calc_average_regions_area.m  calc_baseline.m  calc_beginning_of_events.m  calc_bm3d_video.m  calc_calculus_statistic_for_event.m  calc_calculus_statistic_per_frame.m  calc_colors.m  calc_compactness_index_frame.m  calc_configurations.m  calc_configurations_res.m  calc_correlation_all.m  calc_count_events.m  calc_count_merge.m  calc_count_merge_per_frame.m  calc_count_regions.m  calc_count_regions_for_event.m  calc_count_split.m  calc_count_split_per_frame.m  calc_ending_of_events.m  calc_events.m  calc_events_flow.m  calc_events_hist_projection.m  calc_events_regions_graph.m  calc_events_thresholds.m  calc_ext_info.m  calc_frame_points.m  calc_integrated_information.m  calc_integrated_information_res.m  calc_max_projection_on_video.m  calc_noise_parameters.m  calc_offset_subtraction.m  calc_percent_luminescence_events.m  calc_percent_luminescence_frame.m  calc_real_std.m  calc_registered_video.m  calc_resized_video.m  calc_shannon_entropy.m  (+21 more)
matlab_scripts/config/: config.txt
matlab_scripts/core/: astro_form.fig  astro_form.m  clear_figures.m  close_figure.m  create_project.m  create_solution.m  find_calculus_by_name.m  get_data_info.m  get_figure.m  get_project_export_dir.m  get_project_size.m  load_calculus_config.m  load_project.m  load_solution.m  load_variable_info.m  new_project_form.fig  new_project_form.m  save_project.m  save_solution.m  select_video_form.fig  select_video_form.m  traverse_calculuses.m  traverse_projects.m  unload_project.m  upgrade_calculus.m  upgrade_project.m
matlab_scripts/plot/: plot_configurations.m  plot_configurations_res.m  plot_correlation_all.m  plot_correlation_coefficients.m  plot_correlation_coefficients_double.m  plot_correlation_coefficients_table.m  plot_for_event.m  plot_heatmap.m  plot_per_frame.m  plot_per_threshold.m  plot_split_and_merge.m  plot_split_and_merge_for_event.m  plot_statistics.m  plot_statistics_compare.m  show_video.m  view_events.m
matlab_scripts/save/: save_calculus_statistic_from_events.m  save_calculus_statistic_per_frame.m  (+17 more)
mex_wrappers/: CMakeLists.txt  background_subtraction.cpp  compute_integrated_information.cpp  find_events.cpp  hungarian.cpp  mexFunction.def  preprocessing.cpp
tests/: CMakeLists.txt  astro_analysis_test.cpp  dbscan_test.cpp  dbscan_test_2.cpp
(+160 files in other folders)
